...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bloccoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:backgroundTint="#D9364F"
                android:text="Blocca"
                android:textColor="@color/white"
                android:textSize="10dp"/>

            <Button
                android:id="@+id/sbloccoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:backgroundTint="#146DDA"
                android:text="Sblocca"
                android:textColor="@color/white"
                android:textSize="10dp"/>

            <Button
                android:id="@+id/cancellaPosButton"
                android:layout_width="wrap_content"
...
