<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginVertical="120dp"
        android:layout_marginHorizontal="30dp">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:textSize="30sp"
    android:text="Biblioteca"/>
        <Spinner
            android:id="@+id/bibliotecaSpinner"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:text="Biblioteca"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
             />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:text="Zona"/>
        <Spinner
            android:id="@+id/zonaSpinner"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:text="Biblioteca"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            />

        <Button
            android:id="@+id/cercaButtonAD"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#146DDA"
            android:textColor="@color/white"
            android:text="Cerca"
            android:textSize="20sp" />


    </LinearLayout>


</LinearLayout>