...
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp">

            <RadioButton android:id="@+id/radioIndet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Blocco Indeterminato"/>

            <RadioButton android:id="@+id/radioDet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Blocco determinato"/>

...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="25dp"
                android:id="@+id/bloccoDeterminato">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

...
                        android:text="Ora Fine:"
                        android:textSize="18dp"
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="center"/>

                    <Spinner
                        android:id="@+id/oraFineSpinner"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="2"
                        android:background="@android:drawable/btn_dropdown"
                        android:spinnerMode="dropdown"
                        android:textSize="20dp"
...
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false"/>

            </LinearLayout>

            <Button
                android:id="@+id/buttonBlocco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#146DDA"
                android:textColor="@color/white"
                android:text="Blocca"
...
